# BazelGoApp

./: BUILD.bazel  README.md  WORKSPACE  go.mod
.github/workflows/: main.yml
modules/hello/: BUILD.bazel  hello.go  hello_test.go
modules/web/: BUILD.bazel  web.go
